--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':library')
-    dependencies {
-        implementation 'com.github.Justson:WheelProgress:1.0.0'
-    }
+//    dependencies {
+//        implementation 'com.github.Justson:WheelProgress:1.0.1'
+//    }
 }
